Added update multiple accounts token API (#51)
* Added update multiple accounts token API

* Fixes code smells
